Fixed general issues

--- a/public/modules/attendance/css/index.css
+++ b/public/modules/attendance/css/index.css
@@ -8,7 +8,7 @@ input:focus,
 textarea:focus,
 select:focus,
 button:focus {
-    outline:  1px solid #2E85EC !important;
+    outline: none;
 }
 
 button {
