--- a/public/modules/checkouteditor/css/preview-styles.css
+++ b/public/modules/checkouteditor/css/preview-styles.css
@@ -682,7 +682,7 @@
     align-items: center;
     margin: 0 5px 20px 0;
     width: 60px;
-    border: 2px solid #e4e4e4;
+    border: 2px solid var(--primary-color);
     box-sizing: border-box;
     border-radius: 8px;
     padding-top: 3px;
