--- a/public/modules/checkouteditor/css/style.css
+++ b/public/modules/checkouteditor/css/style.css
@@ -791,7 +791,7 @@ textarea:focus {
 /* ---------- Select Sirius ---------- */
 
 #checkout_editor .sirius-select-container {
-    width: 100%;
+    max-width: 400px;
 }
 
 #checkout_editor .sirius-select-text {
