--- a/public/modules/checkouteditor/css/preview-styles.css
+++ b/public/modules/checkouteditor/css/preview-styles.css
@@ -15,7 +15,7 @@
 /* --------------- Preview Visual -------------------- */
 
 .preview {
-    height: calc(100vh - 150px);
+    /* height: calc(100vh - 250px); */
     position: relative;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -672,7 +672,10 @@
 .accepted-payment-list {
     display: flex;
     width: 100%;
-    height: 60px;
+}
+
+.accepted-payment-list.mobile {
+    justify-content: center;
 }
 
 .accepted-payment {
@@ -680,8 +683,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 0 5px 20px 0;
     width: 60px;
+    height: 40px;
+    margin: 0 5px 10px 0;
     border: 2px solid #e1e1e1;
     box-sizing: border-box;
     border-radius: 8px;
