--- a/public/modules/projects/css/style.css
+++ b/public/modules/projects/css/style.css
@@ -299,7 +299,7 @@
     padding-bottom: 6px;
 }
 
-.tracking-sell{
+.open-calls{
     border-top-left-radius: 0px;
     border-bottom-left-radius: 0px;
     border-top-right-radius: 8px;
