--- a/public/modules/checkouteditor/css/style.css
+++ b/public/modules/checkouteditor/css/style.css
@@ -547,7 +547,7 @@ input[type="number"] {
     border-radius: 0 !important;
     -webkit-border-radius: 0 !important;
     -moz-border-radius: 0 !important;
-    padding: 20px 20px 30px 20px;
+    /* padding: 20px 20px 30px 20px; */
 }
 
 
