--- a/public/modules/reports/css/reports.css
+++ b/public/modules/reports/css/reports.css
@@ -454,7 +454,8 @@ h4.number{
     .box-payment-option { flex: 1; }
     .box-payment-option.option { flex-direction: row; }
 }
-
+#type-payment { display: none; }
+#type-payment.visible { display: flex; }
 .container-payment {
     height: 176px;
     align-items: center;
@@ -524,9 +525,6 @@ h4.number{
 }
 
 /* graph */
-.new-graph, .new-graph-pending { opacity: 0.1; }
-.new-graph.visible, .new-graph-pending.visible { opacity: 1; }
-
 .new-graph .ct-series-a .ct-line { stroke: #2e85ec; }
 .new-graph-pending .ct-series-a .ct-line { stroke: #FF7900; }
 .new-graph-cashback .ct-series-a .ct-line { stroke: #1BE4A8; }
@@ -537,16 +535,17 @@ h4.number{
 .new-graph-cashback .ct-series-a .ct-area { fill: #1BE4A8; }
 .new-graph-sell .ct-series-a .ct-area { fill: #2e85ec; }
 
-.off {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.no-graph {
     color: #757575;
     font-size: 16px;
     font-weight: bold;
     text-align: center;
     width: 100%;
+    background: url('/modules/global/img/reports/bg-no-graph.png') no-repeat bottom center;
+    height: 46%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 /* new graph pie */
@@ -1488,10 +1487,11 @@ h4.number{
 }
 
 /* skeleton loading */
-.block {
-    opacity: 0;
+.content-info {
+    height: 100%;
+    min-height: 231px;
 }
-.block.visible { opacity: 1; }
+
 .ske-load {
     position: absolute;
     width: 100%;
