adjusts css and js

--- a/public/modules/global/css/global.css
+++ b/public/modules/global/css/global.css
@@ -991,6 +991,7 @@ img.border-icon{
 .modal-new-layout .modal-header .modal-title {
     font-size: 22px;
     color: #636363;
+    margin-left: 0;
 }
 .modal-new-layout .modal-header .close {
     line-height: 28px;
@@ -1380,9 +1381,20 @@ img.border-icon{
 .modal-new-layout .modal-footer .btn-default,
 .modal-new-layout .informations-data .btn-default {
     color: #636363;
+    background: #EDEDED;
 }
-.modal-new-layout .modal-footer .btn-primary {
+.modal-new-layout .informations-data .buttons-update .btn-default {
+    color: #838383;
+    border: 1px solid #FFFFFF;
+    background: #FFFFFF;
+}
+.modal-new-layout .modal-footer .btn-primary,
+.modal-new-layout .informations-data .buttons-update .btn-primary {
     border: 1px solid #2E85EC;
+}
+.modal-new-layout .modal-footer .btn-primary:hover,
+.modal-new-layout .informations-data .buttons-update .btn-primary:hover {
+    border-color: #589ffc;
 }
 
 /* checkbox new */
@@ -1644,7 +1656,7 @@ input[type="checkbox"], input[type="radio"] {
     background-color: #41DC8F !important;
 }
 .modal-new-layout input:checked + .slider::before {
-    left: -3px !important;
+    left: 2px !important;
 }
 
 .page-project .table td .badge {
