--- a/public/modules/reports/css/reports.css
+++ b/public/modules/reports/css/reports.css
@@ -398,6 +398,9 @@ h4.number{
     font-size: 16px;
 }
 
+#card-products .value-price {}
+#card-products .value-price.invisible { display: none !important; }
+
 .value-price {
     justify-content: space-between;
     align-items: center;
@@ -422,7 +425,10 @@ h4.number{
 .value-price .pink i { transform: rotate(225deg); }
 
 @media only screen and (min-width: 1220px) {
-    .cards-reports .card { width: calc(1/3*100% - (1 - 1/3)* 30px); }
+    .cards-reports .card { 
+        width: calc(1/3*100% - (1 - 1/3)* 30px); 
+        height: 260px;
+    }
 }
 
 .box-payment-option {
@@ -558,6 +564,12 @@ h4.number{
         flex-direction: column;
     }
 }
+
+.new-graph-pie {
+    height: 153px;
+    justify-content: center;
+}
+
 .new-graph-pie,
 .new-graph-pie-mkt { flex: 1; }
 
@@ -1338,44 +1350,53 @@ h4.number{
 .regions-legend li.conversion span { background-color: #2E85EC; }
 
 
+.footer-products {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+.footer-products.visible { height: 208px; }
+
 .list-products {
     margin: 0;
     list-style: none;
     display: none;
     flex-direction: column;
     flex-wrap: wrap;
-    height: 150px;
+    height: 188px;
+    position: relative;
 }
 .list-products.visible { display: flex; }
 
 .list-products li {
     margin: 0 20px 0 0;
+    padding-bottom: 10px;
     border-right: 1px solid #F4F4F4; 
-}
-.list-products li:nth-child(n+8) { 
-    border: 0;
-    margin: 0 0 0 20px;
 }
 
 .list-products li.line { 
     border: 0; 
     margin: 0;
-    border-right: 1px solid #F4F4F4; 
-    /* padding-left: 20px; */
+    padding: 0;
 }
 
 .box-list-products {
-    margin-bottom: 10px;
     display: flex;
     align-items: center;
-    height: 26px;
+    height: 37px;
 }
 
-.list-products figure { margin: 0 10px 0 0; }
+.list-products figure { 
+    margin: 0 10px 0 0; 
+    border: 1px solid #d4d4d4;
+    padding: 3px;
+    border-radius: 4px;
+    cursor: pointer;
+}
 .list-products .bars {
     border-radius: 4px;
     height: 25px;
-    /* min-width: 28%; */
+    min-width: 28%;
 }
 .list-products span {
     color: #fff;
@@ -1503,6 +1524,12 @@ h4.number{
 .content-info {
     height: 100%;
     min-height: 231px;
+}
+.graph-comission,
+.graph-pending,
+.graph-sell,
+.graph-cashback {
+    height: 160px;
 }
 
 .ske-load {
