--- a/public/modules/discount-coupons/css/styles.css
+++ b/public/modules/discount-coupons/css/styles.css
@@ -17,7 +17,7 @@
 
 .small-text {
     font-size: 12px;
-    color: #8b8b8b;
+    color: #636363;
 }
 
 .scroller {
@@ -193,7 +193,7 @@ input::placeholder {
     margin-right: 8px;
     width: 284px;
     height: 84px;
-    border: 1px solid #f4f4f4;
+    border: 1px solid #C0C1C1;
     box-sizing: border-box;
     border-radius: 8px;
     cursor: pointer;
@@ -233,6 +233,7 @@ input::placeholder {
     font-size: 16px;
     font-weight: bold;
     padding-left: 8px;
+    color: #636363;
 }
 
 .clean-cancel {
@@ -345,18 +346,7 @@ input::placeholder {
     left: 14px;
 }
 
-.item {
-    position: relative;
-    float: left;
-    margin-bottom: 8px;
-    margin-right: 8px;
-    width: 284px;
-    height: 84px;
-    border: 1px solid #f4f4f4;
-    box-sizing: border-box;
-    border-radius: 8px;
-    cursor: pointer;
-}
+
 
 .item_placeholder {
     position: relative;
