--- a/public/modules/reports/css/reports.css
+++ b/public/modules/reports/css/reports.css
@@ -1,4 +1,4 @@
-.ct-legend {
+/* .ct-legend {
     position: relative;
     width: 100%;
     z-index: 10;
@@ -22,11 +22,11 @@
 .ct-legend .ct-series-2, .ct-series-c .ct-line {
     color: #37b4aa;
     stroke: #37b4aa
-}
+} */
 
-.ct-point {
+/* .ct-point {
     display: none;
-}
+} */
 
 .scrollbar {
     height:195px;
@@ -1590,3 +1590,10 @@ h4.number{
 @keyframes m {
     to {background-position:left;}
 }
+
+#comission-graph { 
+    margin: 0px 0 -8px -7px; 
+    display: none;
+} 
+#comission-graph.invisible { display: none; } 
+#comission-graph.visible { display: block; } 
