--- a/Modules/Projects/Resources/assets/css/index.css
+++ b/Modules/Projects/Resources/assets/css/index.css
@@ -1,8 +1,22 @@
+.card{
+    border-radius: 8px;
+}
 .card-img-top {
-    border-radius: 16px 16px 0 0;
+    border-radius: 8px 8px 0 0;
     height: 300px;
     object-fit: cover;
 }
+
+.card{
+    min-height:403px;
+}
+.name_project:hover{
+    transition: transform 1.5s;
+}
+.name_project:hover {
+    transform: scale(1.04);
+}
+
 .select2-dropdown.select2-dropdown--above{
     border-color: #88BFFF;
 }
