--- a/Modules/Projects/Resources/assets/css/index.css
+++ b/Modules/Projects/Resources/assets/css/index.css
@@ -1,5 +1,7 @@
 .card{
     border-radius: 8px;
+    min-height:403px;
+
 }
 .card-img-top {
     border-radius: 8px 8px 0 0;
@@ -7,15 +9,28 @@
     object-fit: cover;
 }
 
-.card{
-    min-height:403px;
-}
+
 .name_project:hover{
-    transition: transform 1.5s;
+    transition: transform 1s;
 }
 .name_project:hover {
     transform: scale(1.04);
 }
+
+
+.drag-drop-icon{
+    border-radius: 4px;
+    opacity: 0;
+    transition: opacity 1s, background .5s;
+}
+.name_project:hover .drag-drop-icon{
+    opacity: 1;
+}
+
+.ui-sortable-helper .drag-drop-icon{
+    background: #F1F1F1;
+}
+
 
 .select2-dropdown.select2-dropdown--above{
     border-color: #88BFFF;
