--- a/public/modules/reports/css/reports.css
+++ b/public/modules/reports/css/reports.css
@@ -773,6 +773,14 @@ h4.number{
 .inner { padding: 0 20px 20px 20px; }
 .inner.cash { padding-bottom: 30px; }
 
+#info-commission { min-height: 126px; }
+#info-commission .ske-load { transform: translate(0, -42%); }
+
+.new-finance-graph {
+    height: 359px;
+    padding-bottom: 20px;
+}
+
 @media only screen and (min-width: 1220px) {
     .commission { flex: 0 0 67%; }
     .distribution { flex: 0 0 30%; }
@@ -798,7 +806,7 @@ h4.number{
 }
 
 .box-finances-values { 
-    padding: 20px 0 0 0; 
+    padding: 20px 0; 
     align-items: center;
 }
 
@@ -1598,6 +1606,11 @@ h4.number{
 .skeleton-gateway-logo{
     height: 34px;
     border-radius: 8px;
+}
+
+.finance-card.commission .ske-load {
+    left: 0;
+    transform: translate(0 ,-48%);
 }
 
 @-webkit-keyframes m {
