--- a/resources/modules/global/css/new-site.css
+++ b/resources/modules/global/css/new-site.css
@@ -1200,6 +1200,12 @@ input[type=radio] {
     box-shadow: 0px 1px 30px #00000026;
     border-radius: 16px !important;
     padding: 8px;
+    right: 25px;
+}
+@media (max-width: 767px){
+    #dropdown_profile_card{
+        right: 10px;
+    }
 }
 
 .ribbon span a {
