--- a/public/modules/reports/css/reports.css
+++ b/public/modules/reports/css/reports.css
@@ -387,7 +387,7 @@ h4.number{
     z-index: 4;
     top: 50%;
     left: 0;
-    transform: translate(0, -50%); */
+    transform: translate(0, -50%);
 }
 .cards-reports .card-origin { padding: 1.429rem; }
 
