Add route for conversion to screen sales. And Add property tension to graph reports.

--- a/Modules/Reports/Resources/assets/css/reports.css
+++ b/Modules/Reports/Resources/assets/css/reports.css
@@ -1722,3 +1722,8 @@ h4.number{
     line-height: 20px;
 }
 .no-sell p { padding: 0 63px; }
+
+#card-conversion .ske-load {
+    position: absolute;
+    transform: translate(0, -40%);
+}
