--- a/resources/modules/global/css/global.css
+++ b/resources/modules/global/css/global.css
@@ -1928,6 +1928,7 @@ tbody td{
     border: 1px solid #e0e7ee;
     border-radius: 8px;
     font-size: 16px;
+    line-height: 20px;
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
