--- a/Modules/Reports/Resources/assets/css/reports.css
+++ b/Modules/Reports/Resources/assets/css/reports.css
@@ -1587,14 +1587,15 @@ h4.number{
     align-items: center;
     justify-content: center;
     display: flex;
-    height: 208px;
+    height: 194px;
+    margin: 0 12px 0 0;
+    overflow: auto;
 }
 
 
 .list-products {
     margin: 0;
     list-style: none;
-    display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     height: 188px;
@@ -1778,7 +1779,7 @@ h4.number{
     /* -webkit-mask-repeat:no-repeat; */
     background:linear-gradient(90deg,#ECECEC 40%,#FFFA ,#ECECEC 60%) right/300% 100% ;
     opacity: 0;
-    animation: m 0.5s linear infinite;
+    animation: m 0.6s linear infinite;
 }
 .skeleton-circle{
     height: 10px;
