--- a/Modules/Reports/Resources/assets/css/reports.css
+++ b/Modules/Reports/Resources/assets/css/reports.css
@@ -1073,6 +1073,7 @@ h4.number{
     margin-right: 15px;
 }
 .align-items { align-items: center; }
+.justify-around { justify-content: space-around; }
 .align-items .qtd {
     height: 33px;
     display: flex;
@@ -1935,3 +1936,10 @@ h4.number{
  }
 
  .new-sell-graph { padding-bottom: 20px; }
+
+ .msg-coupon {
+     font-size: 16px;
+     line-height: 20px;
+     color: #999;
+     font-style: normal;
+ }
